--- a/src/App.css
+++ b/src/App.css
@@ -12,7 +12,7 @@
   width: 100%;
   height: 600px;
   display: block;
-  object-fit: cover;
+  object-fit: contain;
   object-position: center;
   opacity: 0.25;
 }
@@ -30,7 +30,7 @@
 }
 
 h6 {
-  font-size: 1.3rem;
+  font-size: 1.2rem;
   font-weight: 400;
   line-height: 1.5;
 }
@@ -55,6 +55,40 @@ h6 {
 hr {
   border: 0.2px solid #000000;
   margin-bottom: 50px;
+}
+
+.myMainPalette {
+  display: flex;
+  justify-content: center;
+  width: 98%;
+  margin: auto;
+}
+
+.myActionsMenu {
+  width: 80px;
+}
+
+.myPaletteBox {
+  width: 95%;
+  background-color: #303544;
+}
+
+.myPaletteHeader {
+  display: flex;
+  justify-content: flex-start;
+  align-items: flex-start;
+  height: 8%;
+  width: auto;
+  background-color: #232734;
+  color: #ffffff;
+}
+
+.myPaletteHeaderText {
+  width: 95%;
+  margin: auto;
+  text-align: start;
+  font-size: 0.8rem;
+  font-weight: 800;
 }
 
 
